2011-02-20  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/text.c(DragFunc): Support drag and drop of directories onto 
	the windows terminal emulator.

2011-02-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/internal.c (f_calln): Limit recursion depth for multi-variable
	functions in the same manner as for single-variable functions.
	Bug #3184671

	* docs/gnuplot.texi: This file is generated from gnuplot.doc. The copy
	in cvs is perennially out of date, so remove it. "make gnuplot.texi" to
	regenerate it when needed.

2011-02-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm: Add missing TERM_ALPHA_CHANNEL flag for pdfcairo

2011-02-11  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm(WIN_enhanced_flush) src/win/wgraph.c(GraphGetTextLength):
	Adjust position of enhanced text to account for terminal aspect ratio.

2011-02-10  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm (WIN_set_font) src/win/wgraph.c (GraphChangeFont):
	Do not initialize to an empty font name.
	Bugfix

2011-02-10  Ethan A Merritt  <merritt@u.washington.edu>

	* term/lua.trm (LUA_set_color): Initialize rgb_color for the case TC_LT.
	term/lua/gnuplot-tikz.lua: Work around failure to handle LT_NODRAW
	and LT_BACKGROUND. This prevents a freeze, but is not a complete fix.

	* src/save.c (save_linetype): save/show variable linecolor correctly.

	* src/misc.h src/misc.c (parse_colorname):  Split out color name
	interpretation into a separate routine.

	* src/graphics.c (filter_boxplot) src/graphics.h
	src/plot2d.c (boxplot_range_fiddling):
	Sort and filter points contributing to a boxplot at the point we pick
	the auto-range limits rather than waiting till when we draw it.
	Bug #3155750

2011-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm (EMF_filled_polygon): Explicitly set a zero-width
	same-color border for filled polygons, otherwise it inherits a border
	line style.
	Bug #3165902
